--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "naturalwood",
   "version": "0.1.0",
-  "homepage":"http://naturalwooduae.com",
+ 
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.12.3",
@@ -24,10 +24,12 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start-client": "react-scripts start",
+    "build": "react-scripts build  && (cd naturalwoodapi && npm install)",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start": "cd naturalwoodapi  && npm start",
+    "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "eslintConfig": {
     "extends": [
